--- a/scss/tinymce/_tinymce-content.scss
+++ b/scss/tinymce/_tinymce-content.scss
@@ -1,6 +1,6 @@
 & {
 	min-height: 100px;
-	background-color: var(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.2);
 	height: auto;
 	max-height: 600px;
 }
