--- a/scss/components/_buttons-toggles.scss
+++ b/scss/components/_buttons-toggles.scss
@@ -50,7 +50,7 @@
 		border: none;
 		opacity: 0;
 		position: absolute;
-		transition: 0.25;
+		transition: 0.25s;
 
 		&[type="checkbox"]:checked + .toggle-on + .toggle-off { display: none }
 		&[type="checkbox"]:not(:checked) + .toggle-on { display: none }
