--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -1,133 +1,139 @@
 .window-header {
-    background: var(--blades-black-dark);
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    > * {
-        flex-basis: auto;
-
-        // flex-grow: 1;
-        flex-shrink: 0.5;
-    }
-    .window-title {
-        border: none;
-        margin: 0;
-        line-height: 1.2;
-        flex-shrink: 0.5;
-    }
-    a {
-        margin: 0 toRem(5px);
-        i {
-            color: var(--blades-white-bright);
-        }
-    }
-    .close {
-        font-size: 0;
-        margin: 0;
-        transform: scale(1.5);
-        i {
-            font-size: initial;
-            font-weight: bold;
-            color: var(--blades-white-bright);
-            font-size: toRem(20px);
-            line-height: 1;
-            margin-top: toRem(-1px);
-
-            font-family: Kirsty;
-            transform-origin: center center;
-            transform: scaleY(0.75);
-            &::before {
-                content: "X";
-                padding-top: toRem(4px);
-            }
-        }
-    }
-
+	.window-title {
+		font-variant: small-caps;
+		margin-top: 1px;
+		margin-bottom: -1px;
+	}
 }
 
 .window-content {
-  background: var(--blades-black);
-  padding: var(--content-padding);
-  form.editable {
-    @import "../core/text-styles";
-    padding: 0 !important;
+	background: var(--blades-black);
+	padding: var(--content-padding);
+	overflow: hidden;
 
-		.char-img {
-			position: absolute;
-			height: 175px;
-			top: -5px;
-			left: -10px;
-			z-index: 1;
-			border: none;
-			mask-image: linear-gradient(to right, black 75%, transparent);
+	form.editable {
+		@import "../core/text-styles";
+		padding: 0 !important;
+	}
+}
+
+.window-content form.editable .char-img {
+	position: absolute;
+	height: 200px;
+	top: -10px;
+	left: -10px;
+	z-index: 1;
+	border: none;
+	mask-image: linear-gradient(to right, black 75%, transparent);
+}
+
+.window-content form.editable .char-img-bg {
+	position: absolute;
+	width: 100%;
+	top: -20%;
+	filter: saturate(0%) blur(3px);
+	opacity: 0.5;
+	transform: scaleX(-1);
+	mask-image: linear-gradient(to bottom, black, transparent);
+}
+
+.window-content section { position: relative; z-index: 2 }
+
+.window-content section.char-top {
+	display: grid;
+	width: calc(100% + 2 * var(--content-padding));
+	left: calc(-1 * var(--content-padding));
+	grid-auto-columns: 1fr;
+	grid-auto-rows: auto;
+	pointer-events: none;
+
+	input, a { pointer-events: auto }
+
+	> * {
+		z-index: 2;
+		// background: rgba(0, 255, 255, 0.25);
+		// outline: 1px dashed darksalmon;
+	}
+
+	.top-title {
+		--top-title-font-size: #{toRem(32px)};
+		--top-title-height-mult: 1.4;
+
+		--top-title-height: calc(var(--top-title-height-mult) * var(--top-title-font-size));
+
+		grid-area: title;
+		overflow: visible;
+		font-family: var(--font-emphasis);
+		color: var(--blades-white-bright);
+		font-size: var(--top-title-font-size);
+		font-variant: small-caps;
+		height: var(--top-title-height);
+		margin-top: calc(-1 * var(--content-padding));
+		position: relative;
+		top: calc(-1 * (var(--top-title-font-size) / 4));
+	}
+
+	.top-subtitle {
+		--top-subtitle-font-size: #{toRem(24px)};
+		--top-subtitle-height-mult: 1.8;
+
+		--top-subtitle-height: calc(var(--top-subtitle-height-mult) * var(--top-subtitle-font-size));
+
+		grid-area: subtitle;
+		overflow: visible;
+		font-family: var(--font-decorative);
+		font-size: var(--top-subtitle-font-size);
+		height: var(--top-subtitle-height);
+		margin-top: calc(-1 * var(--top-subtitle-font-size));
+	}
+}
+
+.window-content .nav-panel {
+	nav {
+		background-color: var(--blades-grey-bright);
+		border: 2px solid var(--blades-white);
+		padding: 0 toRem(10px);
+		height: toRem(24px);
+		overflow: visible;
+
+		.item {
+			color: var(--blades-black);
+			padding: 0 toRem(10px);
+			font-family: Kirsty;
+			line-height: toRem(20px);
+			transition: 0.25s;
+			transform-origin: center center;
+			white-space: nowrap;
+
+			&.active {
+				background: linear-gradient(to right,
+						transparent,
+						var(--blades-white-bright) 25%,
+						var(--blades-white-bright) 75%,
+						transparent);
+				transform: scale(1.2);
+				position: relative;
+				z-index: 2;
+			}
+
+			&:hover:not(.active) {
+				color: var(--blades-black-dark);
+				transform: scale(1.2);
+				background: linear-gradient(to right,
+						transparent,
+						var(--blades-white) 10%,
+						var(--blades-white-bright) 50%,
+						var(--blades-white) 90%,
+						transparent);
+			}
 		}
+	}
+}
 
-		.char-img-bg {
-			position: absolute;
-			z-index: 0;
-			width: 500px;
-			height: auto;
-			top: -20%;
-			right: -10%;
-			border: none;
-			filter: blur(5px) sepia(2) brightness(0.65);
-			mask-image: linear-gradient(to bottom, black 20%, rgba(0, 0, 0, 0.35) 30%);
-		}
-    section {
-      .nav-panel {
-        nav {
-          background-color: var(--blades-grey-bright);
-            border: 2px solid var(--blades-white);
-          padding: 0 toRem(10px);
-            height: toRem(24px);
-            overflow: visible;
+.window-content .turf-list { @import "../components/turf-block" }
 
-          .item {
-            color: var(--blades-black);
-            padding: 0 toRem(10px);
-            font-family: Kirsty;
-            line-height: toRem(20px);
-            transition: 0.25s;
-            transform-origin: center center;
-            white-space: nowrap;
-
-            &.active {
-              background: linear-gradient(
-                to right,
-                transparent,
-                var(--blades-white-bright) 25%,
-                var(--blades-white-bright) 75%,
-                transparent
-              );
-              transform: scale(1.2);
-              position: relative;
-              z-index: 2;
-            }
-
-            &:hover:not(.active) {
-              color: var(--blades-black-dark);
-              transform: scale(1.2);
-              background: linear-gradient(
-                to right,
-                transparent,
-                var(--blades-white) 10%,
-                var(--blades-white-bright) 50%,
-                var(--blades-white) 90%,
-                transparent
-              );
-            }
-          }
-        }
-      }
-      .turf-list {
-        @import "../components/turf-block";
-      }
-    }
-    .editor-tab {
-      position: relative;
-      width: calc(100% + 2 * var(--content-padding));
-      left: calc(-1 * var(--content-padding));
-    }
-  }
+.window-content .editor-tab {
+	position: relative;
+	width: calc(100% + 2 * var(--content-padding));
+	left: calc(-1 * var(--content-padding));
 }
