--- a/templates/parts/coins-stash.hbs
+++ b/templates/parts/coins-stash.hbs
@@ -1,10 +1,10 @@
 <div id="character-{{actor._id}}-coins" class="flex-horizontal coin-box char-stash">
   <div id="coins-{{actor._id}}-coins-stashed" class="coin-stashed-box">
-    <div class="stripe">
+    {{!-- <div class="stripe">
       <label for="coins-{{actor._id}}-stashed-0">
 				{{localize "BITD.Stash"}} <i class="fab fa-creative-commons-zero nullifier"></i>
 				</label>
-    </div>
+    </div> --}}
     <div class="coins coins-stashed">
       {{#multiboxes data.coins_stashed}}
       <input type="radio" data-dtype="Number" id="coins-{{actor._id}}-stashed-0" name="data.coins_stashed" value="0" checked="checked">
